tests/base/parser/bad/cmodule-contract-cid-lparen-id-colon-with.scilla
scilla_version 0

(* this type is wrong *)
contract Test
( something : bool)
